# dashboard-unity-churn

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONSTITUTION.md  FINDINGS_README.md  Makefile  README.md  app.py  app.yaml  main.py  pyproject.toml  requirements.txt
.specify/: feature.json
.specify/memory/: constitution.md
.streamlit/: config.toml
apps/team_datascience/mvip/unity_churn_dashboard/: CONSTITUTION.md  README.md  app.py  environment.yml  snowflake.yml
apps/team_datascience/mvip/unity_churn_dashboard/.streamlit/: config.toml  secrets.toml.example
apps/team_datascience/mvip/unity_churn_dashboard/utils/: formatting.py  plotting.py  queries.py
specs/001-unity-churn-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unity-churn-dashboard/checklists/: requirements.md
specs/001-unity-churn-dashboard/contracts/: asset-explorer.sql  executive-summary.sql  model-performance.sql
specs/002-call-worklist/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-call-worklist/checklists/: requirements.md
specs/002-call-worklist/contracts/: table-rendering.md
