[project]
name = "dashboard-unity-churn"
version = "0.1.0"
description = "Unity Churn Dashboard — Streamlit-in-Snowflake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "snowflake-connector-python>=4.6.0",
    "streamlit>=1.58.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11",
    "pytest>=8.0",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
